--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -93,7 +93,7 @@
     }
 
     #tagline-head{
-		width: 100%;d
+		width: 100%;
 		height: 150px;
 		min-height: 140px;
 		padding-right: 8px;
@@ -147,31 +147,30 @@
         line-height: 40px;
         color: white;
     }
-    /*#tagline-foot{*/
-        /*width: 100%;*/
-        /*height: 70px;*/
-        /*box-sizing: border-box;*/
-        /*position: absolute;*/
-        /*z-index: 10;*/
-        /*bottom: 0;*/
-        /*left: 0px;*/
-    /*}*/
-
 
     /*--- content style ----*/
-    #time-date-indicator{
+    #date-time-indicator{
         box-sizing: border-box;
         padding: 8px 12px;
-        height: 100%;
+        height: 120px;
         float: right;
+		width: 100%;
     }
-    .date-indicator{
-        /*line-height: 80px;*/
-        color: white;
-    }
-    .time-indicator{
-        font-size: 55px;
-    }
+	#date-time-wrapper{
+		width: 100%;
+		height: 100%;
+		box-sizing: border-box;
+	}
+	.time-indicator{
+		display: block;
+		width: 100%;
+		height: 60px;
+	}
+	.date-indicator{
+		display: block;
+		width: 100%;
+		height: 44px;
+	}
 
 
     /* -- logo style  --*/
@@ -223,9 +222,14 @@
 		box-sizing: border-box;
 		box-shadow: 0 8px 17px 2px rgba(0,0,0,0.14), 0 3px 14px 2px rgba(0,0,0,0.12), 0 5px 5px -3px rgba(0,0,0,0.2);
 	}
+	.queue-box{
+		margin-bottom: 16px;
+	}
 	.queue-box .queue-name{
 		width: 55%;
 		height: 90px;
+		padding: 4px 8px;
+		font-family: roboto-light;
 		float: left;
 		box-sizing: border-box;
 		background-color: inherit;
@@ -239,12 +243,25 @@
 		background-color: #0b51c5;
 		float: right;
 	}
+	.queue-number-content{
+		line-height: 90px;
+		font-size: 43px;
+		text-transform: uppercase;
+		color: white;
+	}
 	.queue-box .queue-footer{
 		clear: both;
 		width: 100%;
 		height: 40px;
 		display: block;
-		background-color: white;
+		padding: 0px 8px;
+		box-sizing: border-box;
+		border-top: 4px #0b51c5 solid;
+		background-color: #0f1531;
+	}
+	.queue-box .queue-footer span{
+		line-height: 40px!important;
+		text-transform: uppercase;
 	}
 
 
