--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -213,6 +213,14 @@
 		background-color: black;
 		box-shadow: 0 24px 38px 3px rgba(0,0,0,0.14), 0 9px 46px 8px rgba(0,0,0,0.12), 0 11px 15px -7px rgba(0,0,0,0.2);
     }
+    .row-queue{
+        width: 100%;
+        max-width: 100%;
+        max-height: 100%;
+        height: auto;
+        background-color: black;
+        box-shadow: 0 24px 38px 3px rgba(0,0,0,0.14), 0 9px 46px 8px rgba(0,0,0,0.12), 0 11px 15px -7px rgba(0,0,0,0.2);
+    }
 
 
     /*-- service card --*/
