--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -88,6 +88,7 @@
         height: 120px;
         min-height: 120px;
         max-height: 150px;
+		border-bottom: 3px black solid;
     }
 
     #tagline-head{
@@ -117,6 +118,9 @@
         position: relative;
         top: 0;
         left: 0;
+		border-bottom: 4px black solid;
+		border-left: 4px black solid;
+		border-right: 4px black solid;
     }
     .brand-wrapper{
 		width: 100%;
@@ -126,7 +130,7 @@
 		left: 0;
 		z-index: 10;
 		box-sizing: border-box;
-		padding: 12px 50px 12px 50px;
+		padding: 12px 115px 12px 50px;
 	}
 
     #footer-card{
@@ -134,12 +138,13 @@
         bottom: 0;
         left: 0;
         width: 100%;
-        height: 40px;
+		border-top: 3px black solid;
+        height: 50px;
         min-height: 40px;
     }
 
     #running-text{
-        line-height: 40px;
+        line-height: 50px;
     }
 
     /*--- content style ----*/
@@ -202,8 +207,10 @@
         width: 100%;
         max-width: 100%;
         max-height: 100%;
-        height: auto;
+        height: 530px;
 		background-color: black;
+		padding: 4px;
+		box-sizing: border-box;
 		box-shadow: 0 24px 38px 3px rgba(0,0,0,0.14), 0 9px 46px 8px rgba(0,0,0,0.12), 0 11px 15px -7px rgba(0,0,0,0.2);
     }
     .row-queue{
