--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -222,6 +222,17 @@
 		width: 100%;
 		height: 100%;
 	}
+	.media-gambar-list .delete{
+		margin-left: auto;
+		cursor: pointer;
+		font-size: 1.3rem;
+		font-weight: 600;
+		color: #fb9678;
+		width: 1.25rem;
+		height: 1.25rem;
+		line-height: 20px;
+		text-align: center;
+	}
     .row-queue{
         width: 100%;
         max-width: 100%;
