--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,3 +1,19 @@
+
+	@media only screen and (max-width: 1024px) {
+		#main-container{
+			padding: 20px 14px!important;
+			box-sizing: border-box
+		}
+	}
+
+	@media only screen and (min-width: 1024px) {
+		#main-container{
+			padding: 20px 80px!important;
+			box-sizing: border-box
+		}
+	}
+
+
 	img{
 		max-width: 100%;
 		max-height: 100%;
