--- a/assets/css/app-extend.css
+++ b/assets/css/app-extend.css
@@ -105,14 +105,14 @@ img{
 	top: 0;
 	left: 0;
 	width: 100%;
-	height: 150px;
+	height: 130px;
 	border-bottom: 3px black solid;
 }
 
 #tagline-head{
 	width: 100%;
-	height: 150px;
-	min-height: 140px;
+	height: 130px;
+	min-height: 130px;
 	padding-right: 8px;
 	box-sizing: border-box;
 	position: relative;
@@ -122,10 +122,9 @@ img{
 .tagline-wrapper{
 	width: 100%;
 	height: 100%;
-	position: absolute;
+	/*position: absolute;*/
 	top: 0;
 	left: 0;
-	border-bottom: 3px black solid;
 }
 .parallelogram {
 	width: 100%;
@@ -149,7 +148,7 @@ img{
 	left: 0;
 	z-index: 10;
 	box-sizing: border-box;
-	padding: 12px 12px 12px 50px;
+	padding: 8px 8px 8px 50px;
 }
 
 #footer-card{
@@ -158,12 +157,12 @@ img{
 	left: 0;
 	width: 100%;
 	border-top: 3px black solid;
-	height: 50px;
+	height: 40px;
 	min-height: 40px;
 }
 
 #running-text{
-	line-height: 50px;
+	line-height: 40px;
 }
 
 /*--- content style ----*/
@@ -380,3 +379,6 @@ img{
 	border-right: 29px solid #eee;
 }
 
+.waiting-queue-card{
+	height: 148px;
+}
