--- a/assets/css/app-extend.css
+++ b/assets/css/app-extend.css
@@ -382,3 +382,17 @@ img{
 .waiting-queue-card{
 	height: 148px;
 }
+
+.media-slider{
+	width: 100%;
+	height: 100%;
+}
+.media-slider video{
+	width: 100%;
+	height: 100%;
+}
+
+.media-slider img{
+	width: 100%;
+	height: 100%;
+}
